Added line_items to routes, docs

--- a/README
+++ b/README
@@ -23,6 +23,7 @@ Example
       map.resources :products
       map.current_cart 'cart', :controller => 'carts', :action => 'show', :id => 'current'
       map.resources :carts
+      map.resources :line_items
       map.resources :orders
 
 
